force-app/main/default/objects/Quote_Item__c/fields/Cost_Price_GST_exc__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_GST_exc__c</fullName>
    <formula>IF( Including_GST__c ,
  Cost_Price__c  - (Cost_Price__c / 11),
Cost_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Price (GST exc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>