force-app/main/default/objects/Quote_Item__c/fields/Including_GST__c.field-meta.xml
<CustomField>
    <fullName>Including_GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Including GST</label>
    <type>Checkbox</type>
</CustomField>