force-app/main/default/objects/Quote_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>