force-app/main/default/objects/Quote_Item__c/fields/Purchase_Request_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Request_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Request No.</label>
    <referenceTo>Purchase_Request__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>