force-app/main/default/objects/Quote_Item__c/fields/Total_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Price__c</fullName>
    <formula>Cost_Price__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity X Cost Price</inlineHelpText>
    <label>Total Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>